--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -122,7 +122,7 @@
                             android:layout_toRightOf="@id/ivPhoto"
                             android:text="ID"
                             android:textColor="@color/white"
-                            android:textSize="16sp" />
+                            android:textSize="12sp" />
                     </LinearLayout>
                     <!--顶部右侧信息-->
                     <RelativeLayout
@@ -258,7 +258,7 @@
                         android:layout_width="13dp"
                         android:layout_height="13dp"
                         android:layout_marginLeft="2dp"
-                        android:src="@mipmap/public_more2" />
+                        android:src="@mipmap/ic_arrow_red" />
                 </LinearLayout>
 
                 <View style="@style/horizontalLine" />
@@ -351,6 +351,14 @@
                     </LinearLayout>
 
                 </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:background="@mipmap/ticket_background"
+                android:orientation="vertical">
 
                 <View style="@style/horizontalLine" />
                 <!--我的邀请码-->
@@ -370,7 +378,7 @@
 
                     <TextView
                         android:id="@+id/tv_mine_invitation_count"
-                        style="@style/gray_style"
+                        style="@style/mine_red_style"
                         android:gravity="center_vertical|left"
                         android:text="0" />
 
@@ -378,145 +386,7 @@
                         android:layout_width="13dp"
                         android:layout_height="13dp"
                         android:layout_marginLeft="2dp"
-                        android:src="@mipmap/public_more2" />
-                </LinearLayout>
-
-            </LinearLayout>
-            <!--我的商城-->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@mipmap/ticket_background"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/default_user_view_height"
-                    android:layout_marginTop="10dp"
-                    android:background="@color/white"
-                    android:gravity="center_vertical"
-                    android:paddingLeft="15dp">
-
-                    <ImageView
-                        android:layout_width="22dp"
-                        android:layout_height="22dp"
-                        android:src="@mipmap/ic_shop" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_marginLeft="10dp"
-                        android:text="我的商城"
-                        android:textColor="@color/black"
-                        android:textSize="15sp"
-                        android:textStyle="bold" />
-
-                </LinearLayout>
-
-                <View style="@style/horizontalLine" />
-                <!--商城收益-->
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/user_view_middle_height"
-                    android:background="@color/white"
-                    android:orientation="horizontal">
-                    <!--商城余额-->
-                    <LinearLayout
-                        android:id="@+id/ly_tv_balance"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:background="@drawable/listview"
-                        android:gravity="center"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:id="@+id/tv_balance"
-                            style="@style/text_cons_style_for_user"
-                            android:text="¥0" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="余额" />
-
-                    </LinearLayout>
-
-                    <!--今日收益-->
-                    <LinearLayout
-                        android:id="@+id/ly_earn_today"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:background="@drawable/listview"
-                        android:gravity="center"
-                        android:orientation="vertical">
-
-
-                        <TextView
-                            android:id="@+id/tv_earn_today"
-                            style="@style/text_cons_style_for_user"
-                            android:text="¥0" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="今日收益" />
-
-                    </LinearLayout>
-
-                    <!--本月预估收益-->
-                    <LinearLayout
-                        android:id="@+id/ly_earn_month"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:background="@drawable/listview"
-                        android:gravity="center"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:id="@+id/tv_earn_month"
-                            style="@style/text_cons_style_for_user"
-                            android:text="¥0" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="本月预估收益" />
-
-                    </LinearLayout>
-                </LinearLayout>
-
-                <View style="@style/horizontalLine" />
-
-                <!--商城等级-->
-                <LinearLayout
-                    android:id="@+id/ly_shop_level"
-                    style="@style/mine_item_ll">
-
-                    <ImageView
-                        android:layout_width="21dp"
-                        android:layout_height="21dp"
-                        android:layout_gravity="center_vertical"
-                        android:src="@mipmap/ic_level" />
-
-                    <TextView
-                        style="@style/mine_item"
-                        android:text="商城等级" />
-
-                    <TextView
-                        android:id="@+id/tv_shop_level"
-                        style="@style/gray_style"
-                        android:gravity="center_vertical|left"
-                        android:text="0" />
-
-                    <ImageView
-                        android:layout_width="13dp"
-                        android:layout_height="13dp"
-                        android:layout_marginLeft="2dp"
-                        android:src="@mipmap/public_more2" />
+                        android:src="@mipmap/ic_arrow_red" />
                 </LinearLayout>
 
                 <View style="@style/horizontalLine" />
@@ -540,15 +410,172 @@
                         android:layout_width="13dp"
                         android:layout_height="13dp"
                         android:layout_marginLeft="2dp"
-                        android:src="@mipmap/public_more2" />
+                        android:src="@mipmap/ic_arrow_red" />
                 </LinearLayout>
+
+                <View style="@style/horizontalLine" />
+                <!--我的收藏-->
+                <LinearLayout
+                    android:id="@+id/llMyCollection"
+                    style="@style/mine_item_ll">
+
+                    <ImageView
+                        android:layout_width="21dp"
+                        android:layout_height="21dp"
+                        android:layout_gravity="center_vertical"
+                        android:src="@mipmap/ic_my_collection" />
+
+                    <TextView
+                        style="@style/mine_item"
+                        android:text="我的收藏" />
+
+                    <ImageView
+                        android:layout_width="13dp"
+                        android:layout_height="13dp"
+                        android:layout_marginLeft="2dp"
+                        android:src="@mipmap/ic_arrow_red" />
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <!--我的账本-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:background="@mipmap/ticket_background"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/default_user_view_height"
+                    android:background="@color/white"
+                    android:gravity="center"
+                    android:paddingLeft="15dp">
+
+                    <ImageView
+                        android:layout_width="22dp"
+                        android:layout_height="22dp"
+                        android:src="@mipmap/ic_my_account_book" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="10dp"
+                        android:text="我的账本"
+                        android:textColor="@color/black"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+
+                <View style="@style/horizontalLine" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:background="@color/white"
+                    android:orientation="horizontal">
+                    <!--我赚的钱-->
+                    <LinearLayout
+                        android:id="@+id/ly_tv_balance"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:background="@drawable/listview"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="我赚的钱"
+                            android:textColor="#333333"
+                            android:textSize="14sp" />
+
+                        <TextView
+                            android:id="@+id/tv_balance"
+                            style="@style/text_cons_style_for_user"
+                            android:text="0元" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="可提现"
+                            android:textColor="#333333"
+                            android:textSize="12sp" />
+
+                    </LinearLayout>
+
+
+                    <!--我省的钱-->
+                    <LinearLayout
+                        android:id="@+id/ly_earn_month"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:background="@drawable/listview"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="我省的钱"
+                            android:textColor="#333333"
+                            android:textSize="14sp" />
+
+                        <TextView
+                            android:id="@+id/tv_earn_month"
+                            style="@style/text_cons_style_for_user"
+                            android:text="0元" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="累计省钱"
+                            android:textColor="#333333"
+                            android:textSize="12sp" />
+
+                    </LinearLayout>
+                </LinearLayout>
+            </LinearLayout>
+
+            <!--商城等级-->
+            <LinearLayout
+                android:id="@+id/ly_shop_level"
+                style="@style/mine_item_ll"
+                android:layout_marginTop="10dp">
+
+                <ImageView
+                    android:layout_width="21dp"
+                    android:layout_height="21dp"
+                    android:layout_gravity="center_vertical"
+                    android:src="@mipmap/ic_level" />
+
+                <TextView
+                    style="@style/mine_item"
+                    android:text="商城等级" />
+
+                <TextView
+                    android:id="@+id/tv_shop_level"
+                    style="@style/mine_red_style"
+                    android:gravity="center_vertical|left"
+                    android:text="0" />
+
+                <ImageView
+                    android:layout_width="13dp"
+                    android:layout_height="13dp"
+                    android:layout_marginLeft="2dp"
+                    android:src="@mipmap/ic_arrow_red" />
             </LinearLayout>
 
             <!--新手攻略和常见问题-->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
                 android:background="@mipmap/ticket_background"
                 android:orientation="vertical">
 
@@ -572,7 +599,7 @@
                         android:layout_width="13dp"
                         android:layout_height="13dp"
                         android:layout_marginLeft="2dp"
-                        android:src="@mipmap/public_more2" />
+                        android:src="@mipmap/ic_arrow_red" />
                 </LinearLayout>
 
                 <View style="@style/horizontalLine" />
@@ -595,7 +622,7 @@
                         android:layout_width="13dp"
                         android:layout_height="13dp"
                         android:layout_marginLeft="2dp"
-                        android:src="@mipmap/public_more2" />
+                        android:src="@mipmap/ic_arrow_red" />
                 </LinearLayout>
 
             </LinearLayout>
@@ -603,7 +630,8 @@
             <LinearLayout
                 android:id="@+id/iv_setting"
                 style="@style/mine_item_ll"
-                android:layout_marginBottom="5dp">
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp">
 
                 <ImageView
                     android:layout_width="21dp"
@@ -619,7 +647,7 @@
                     android:layout_width="13dp"
                     android:layout_height="13dp"
                     android:layout_marginLeft="10dp"
-                    android:src="@mipmap/public_more2" />
+                    android:src="@mipmap/ic_arrow_red" />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
