--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,4 +28,5 @@
     <color name="black80">#212121</color>
     <color name="blue">#ff298ecb</color>
     <color name="transparent">#00000000</color>
+    <color name="mine_text_red">#ED3434</color>
 </resources>
