--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -56,6 +56,14 @@
         <item name="android:textStyle">normal</item>
     </style>
 
+    <style name="mine_red_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">@dimen/text_size_13</item>
+        <item name="android:textColor">@color/mine_text_red</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
     <style name="mine_item_ll">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">50dp</item>
@@ -167,7 +175,7 @@
         <item name="android:paddingRight">5dp</item>
         <item name="android:singleLine">true</item>
         <item name="android:ellipsize">end</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">17sp</item>
     </style>
 
     <style name="Animations_BottomPush">
