--- a/app/src/main/res/layout/header_my_earnings.xml
+++ b/app/src/main/res/layout/header_my_earnings.xml
@@ -21,8 +21,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp">
                 <ImageView
+                    android:onClick="@{()->earnings.finish()}"
                     android:layout_width="40dp"
-                    android:padding="5dp"
+                    android:padding="8dp"
                     android:scaleType="centerCrop"
                     android:src="@mipmap/icon_back"
                     android:layout_height="40dp" />
@@ -48,11 +49,12 @@
             </LinearLayout>
 
             <RelativeLayout
+                android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:orientation="horizontal"
+                android:layout_height="27dp">
                 <TextView
                     android:layout_marginLeft="20dp"
-                    android:layout_marginTop="20dp"
                     android:layout_width="wrap_content"
                     android:text="当前余额(元)"
                     android:textColor="@color/white"
@@ -60,7 +62,7 @@
                     android:layout_height="wrap_content" />
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="60dp"
                     android:text="提现"
                     android:id="@+id/tv_withdraw"
                     android:background="@drawable/shape_earnings_withdraw"
@@ -68,18 +70,25 @@
                     android:onClick="@{()->earnings.toWithdrawPage()}"
                     android:paddingLeft="10dp"
                     android:paddingTop="2dp"
+                    android:textColor="@color/black"
+                    android:gravity="center"
                     android:paddingBottom="2dp"
                     android:paddingRight="10dp"
-                    android:layout_marginTop="20dp"
                     android:layout_marginRight="60dp"
                     android:layout_alignParentRight="true"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="match_parent" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_marginTop="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="29dp">
+
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:orientation="horizontal"
                     android:layout_marginLeft="20dp"
-                    android:layout_marginBottom="25dp"
                     android:layout_alignParentBottom="true"
                     android:layout_height="wrap_content">
                     <TextView
@@ -97,6 +106,7 @@
                 </LinearLayout>
 
                 <TextView
+
                     android:layout_width="wrap_content"
                     android:id="@+id/tv_record"
                     android:text="提现记录"
@@ -104,9 +114,8 @@
                     android:textColor="@color/white"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentBottom="true"
-                    android:layout_marginRight="60dp"
+                    android:layout_marginRight="65dp"
                     android:gravity="center"
-                    android:layout_marginBottom="35dp"
                     android:layout_height="40dp" />
             </RelativeLayout>
 
