--- a/app/src/main/res/layout/header_savings.xml
+++ b/app/src/main/res/layout/header_savings.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <data>
+        <variable
+            name="savings"
+            type="com.tudouni.makemoney.viewModel.SavingsViewModel"/>
+    </data>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -9,7 +15,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="210dp"
-            android:background="@mipmap/earnings_header_bg"
+            android:background="@mipmap/bg_isavemoney"
             android:orientation="vertical">
 
             <LinearLayout
@@ -19,7 +25,8 @@
                 <ImageView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:padding="5dp"
+                    android:padding="8dp"
+                    android:onClick="@{()->savings.finish()}"
                     android:scaleType="centerCrop"
                     android:src="@mipmap/icon_back" />
 
@@ -72,7 +79,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="510.00"
+                    android:text="@{String.valueOf(savings.savings.economizes)}"
                     android:textColor="@color/white"
                     android:textSize="26sp" />
             </LinearLayout>
@@ -80,6 +87,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
+                android:background="#33ffffff"
                 android:layout_height="65dp"
                 android:orientation="horizontal"
                 android:paddingLeft="40dp"
@@ -102,9 +110,11 @@
                         android:textSize="12sp" />
 
                     <TextView
+                        android:layout_marginTop="3dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="#7e7e7e"
+                        android:textColor="@color/white"
+                        android:text="@{String.valueOf(savings.savings.orders)}"
                         android:textSize="12sp" />
                 </LinearLayout>
 
@@ -121,14 +131,17 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
-                        android:text="预估收益"
+                        android:text="应付金额(元)"
                         android:textColor="#ececec"
                         android:textSize="12sp" />
 
                     <TextView
+                        android:layout_marginTop="3dp"
+
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="#7e7e7e"
+                        android:textColor="@color/white"
+                        android:text="@{@string/rmb + String.valueOf(savings.savings.payable)}"
                         android:textSize="12sp" />
                 </LinearLayout>
 
@@ -145,15 +158,17 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
-                        android:text="结算佣金"
+                        android:text="实付金额(元)"
                         android:textColor="#ececec"
                         android:textSize="12sp" />
 
 
                     <TextView
+                        android:layout_marginTop="3dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="#7e7e7e"
+                        android:textColor="@color/white"
+                        android:text="@{@string/rmb + String.valueOf(savings.savings.realPay)}"
                         android:textSize="12sp" />
                 </LinearLayout>
             </LinearLayout>
@@ -175,7 +190,7 @@
                 android:drawableLeft="@mipmap/earnings_rank_icon"
                 android:gravity="center_vertical"
                 android:paddingLeft="20dp"
-                android:text="    赚钱排行"
+                android:text="    省钱排行"
                 android:textColor="@color/black"
                 android:textSize="15sp" />
 
