--- a/app/src/main/res/layout/password_login_child_layout.xml
+++ b/app/src/main/res/layout/password_login_child_layout.xml
@@ -71,9 +71,9 @@
             android:layout_marginLeft="6dp"
             android:layout_weight="1"
             android:background="@null"
+            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
             android:hint="请输入密码"
-            android:inputType="number"
-            android:maxLength="6"
+            android:maxLength="16"
             android:textColor="@color/color_333333"
             android:textColorHint="@color/color_999999"
             android:textScaleX="0.99"
