--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -46,12 +46,12 @@
                 android:textSize="12sp" />
         </LinearLayout>
 
-        <TextView
+        <com.tudouni.makemoney.view.MyTextView
             android:id="@+id/tv_message_content"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_height="100dp"
             android:layout_marginTop="5dp"
-            android:text="通知..."
+            android:text=""
             android:textColor="#C2C2C2"
             android:textSize="13sp" />
     </LinearLayout>
