--- a/app/src/main/res/layout/my_title_bar.xml
+++ b/app/src/main/res/layout/my_title_bar.xml
@@ -24,8 +24,7 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="5dp"
-            android:orientation="horizontal"
-            android:visibility="gone">
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/iv_left_icon"
@@ -44,7 +43,8 @@
                 android:gravity="center"
                 android:maxLines="1"
                 android:textColor="@color/color_333333"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:visibility="gone" />
         </LinearLayout>
 
         <TextView
