--- a/app/src/main/res/layout/password_login_child_layout.xml
+++ b/app/src/main/res/layout/password_login_child_layout.xml
@@ -73,6 +73,7 @@
             android:background="@null"
             android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
             android:hint="请输入密码"
+            android:inputType="textPassword"
             android:maxLength="16"
             android:textColor="@color/color_333333"
             android:textColorHint="@color/color_999999"
