--- a/app/src/main/res/layout/header_my_earnings.xml
+++ b/app/src/main/res/layout/header_my_earnings.xml
@@ -79,9 +79,9 @@
             </RelativeLayout>
 
             <RelativeLayout
-                android:layout_marginTop="20dp"
+                android:layout_marginBottom="25dp"
                 android:layout_width="match_parent"
-                android:layout_height="29dp">
+                android:layout_height="wrap_content">
 
 
                 <LinearLayout
