--- a/app/src/main/res/layout/item_earnings.xml
+++ b/app/src/main/res/layout/item_earnings.xml
@@ -87,7 +87,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@{income.incomeType == 4 ? String.valueOf(income.orderCount) : income.getFormatterIncome(income.expectedIncome)}"
+                    android:text="@{income.incomeType == 4 ? String.valueOf(income.orderCount) : income.getFormatterExpectedIncome(income.expectedIncome)}"
                     android:textColor="#ff6060"
                     android:textSize="18sp" />
 
